--- a/app.css
+++ b/app.css
@@ -10,7 +10,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+}
   
   /* Modal Content/Box */
   .modal-content {
@@ -35,4 +35,13 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  button {
+    border: none;
+    background-color: rgb(0,86,39);
+    color: white;
+    padding: 0.8em;
+    text-align: center;
+    margin-top: 1em;
   }
