--- a/app.css
+++ b/app.css
@@ -1,3 +1,7 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -37,11 +41,20 @@
     cursor: pointer;
   }
 
-  button {
+  button, .file {
+    font-size: small;
     border: none;
     background-color: rgb(0,86,39);
     color: white;
     padding: 0.8em;
     text-align: center;
     margin-top: 1em;
+  }
+
+  .modal h2 {
+    text-align: center;
+  }
+
+  input {
+    width: 100%;
   }
